src/pages/landing page/LandingPage.css
:root {
  --PRIMARY-COLOR: rgb(55, 136, 250);
  --SECONDARY-COLOR: rgb(224, 236, 255);
}

.LPHeader {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  position: relative;
  position: fixed;
  height: fit-content;
  top: 0;
  left: 0;
  background-color: white;
  box-shadow: 0 0 8px gray;
  padding: 10px;
  z-index: 100;
}

.authBtnsContainer {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 20px;
  padding: 10px;

  & button {
    padding: 5px;
    letter-spacing: 1px;
    border-radius: 5px;
    outline: none;
    width: 100px;
    font-size: 1rem;
    cursor: pointer;
  }

  & .signInBtn {
    background-color: white;
    border: 1px solid rgb(55, 136, 250);
    color: rgb(55, 136, 250);
  }

  & .signUpBtn {
    background-color: rgb(55, 136, 250);
    color: white;
    border: none;
  }
}

.logoContainer {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 5px;
  font-size: 1rem;

  & img {
    width: 40px;
    height: 40px;
    border-radius: 50%;
    box-shadow: 0 0 4px blue;
  }

  & p {
    color: rgb(55, 136, 250);
    font-size: 1.1rem;
    font-weight: 700;
  }
}

.menuIconSpan {
  cursor: pointer;
}

.navMenu {
  position: fixed;
  top: 70px;
  right: 5px;
  width: 0;
  
  display: flex;
  flex-direction: column;
  gap: 26px;
  color: rgb(224, 236, 255);
  background-color: rgb(55, 136, 250);
  padding: 0;
  border-radius: 10px;
  transition: width .2s linear;
  overflow: hidden;

  & li {
    font-size: 1.1rem;
    border-bottom: 2px solid rgb(224, 236, 255);
    padding-bottom: 5px;
    cursor: pointer;
  }

  & a {
    color: white;
  }
}

.ShowNavMenu {
  width: 200px;
  padding: 10px;
  padding-block: 20px;
}

.LPMain {
  width: 100%;
  display: flex;
  flex-direction: column;
  padding-top: 60px;
  margin: 0;
}

.heroSection {
  width: 100%;
  display: flex;
  justify-content: space-around;
  padding: 20px;
  gap: 20px;
}

.heroTextContainer {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  padding: 10px;
  gap: 20px;
  width: 40%;

  & .label {
    background-color: rgb(224, 236, 255);
    width: fit-content;
    padding: 5px;
    padding-inline: 10px;
    border-radius: 15px;
    font-size: 0.9rem;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 5px;
  }

  & h2 {
    font-size: 3rem;
  }

  & .trendy {
    color: rgb(55, 136, 250);
    font-style: italic;
  }

  & .heroParagraph {
    color: rgb(108, 108, 108);
  }
}

.bloggingImageFigure {
  width: 40%;
  height: 400px;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-block: 2rem;
  padding: 10px;
  box-shadow: 0 0 4px rgb(55, 136, 250);
  border-radius: 15px;
  position: relative;
  background-color: white;

  & img {
    width: 100%;
    height: 100%;
    border-radius: 20px;
    margin-inline: auto;
    object-fit: cover;
  }
}

@property --angle {
  syntax: "<angle>";
  initial-value: 0deg;
  inherits: false;
}

.bloggingImageFigure::before, .bloggingImageFigure::after {
  content: "";
  position: absolute;
  width: 100%;
  height: 100%;
  background-image: conic-gradient(from var(--angle), transparent 90%, rgb(55,136,250));
  z-index: -1;
  border-radius: 15px;
  padding: 3px;
  animation: spin 6s linear infinite;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.bloggingImageFigure::after {
  filter: blur(1.5rem);
}




.CTABtnsContainer {
  max-width: 90%;
  display: flex;
  justify-content: flex-start;
  align-items: start;
  gap: 20px;
  padding: 10px;
  padding-left: 0;
  margin-top: 2rem;
  margin-inline: auto;

  & button {
    cursor: pointer;
    border-radius: 20px;
    font-size: 1rem;
    white-space: nowrap;
    width: 40%;
  }

  & .btn1 {
    background-color: rgb(55, 136, 250);
    color: white;
    border: none;
    padding: 10px;
    display: flex;
    justify-content: space-around;
    align-items: center;
    gap: 8px;
    box-shadow: 0 0 4px rgb(55, 136, 250);
    width: 60%;
    height: 50px;
  }

  & .btn1:hover {
    animation: vibrate 0.3s linear infinite both;
  }

  & .btn2 {
    background-color: white;
    border: 1px solid gray;
    color: rgb(108, 108, 108);
    padding: 10px;
  }
}

/* ANIMATIONS START */

@keyframes spin {
  from {
    --angle: 0deg;
  }
  to {
    --angle: 360deg;
  }
}

@keyframes vibrate {
  0% {
    transform: translate(0);
  }
  20% {
    transform: translate(-2px, 2px);
  }
  40% {
    transform: translate(-2px, -2px);
  }
  60% {
    transform: translate(2px, 2px);
  }
  80% {
    transform: translate(2px, -2px);
  }
  100% {
    transform: translate(0);
  }
}

/* ANIMATIONS END */

.curatedStoriesSection {
  width: 100%;
  min-height: 100vh;
  background-color: rgb(250, 250, 250);
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  padding: 10px;
  padding-top: 20px;
  gap: 20px;
  margin-block: 3rem;

  & h3 {
    font-size: 1.8rem;
  }

  & p {
    text-align: center;
    font-size: 0.9rem;
    width: 60%;
  }

  & .storiesContainer {
    display: flex;
    flex-direction: column;
    gap: 20px;
    padding: 10px;
    margin-top: 2rem;
  }
}
/* ... */

